# cyanocitta

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  setup  setup.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
crates/cyanocitta/: Cargo.toml  tauri.conf.json
crates/cyanocitta/src/: lib.rs  main.rs
crates/cyanocitta/src/app_state/: mod.rs
crates/cyanocitta/src/commands/: mod.rs
crates/cyanocitta/ui/: index.html
crates/cyanocitta/ui/pages/: home.html  settings.html
crates/cyanocitta/ui/scripts/: global.js  home.js  index.js  settings.js
crates/cyanocitta/ui/styles/: global.css  index.css  settings.css
crates/nostr/: Cargo.toml
crates/nostr/src/: lib.rs
crates/nostr/src/client/: listen.rs  mod.rs  relay.rs  send.rs
crates/nostr/src/types/: message.rs  mod.rs
crates/nostr/src/types/event/: content.rs  id.rs  kind.rs  mod.rs  sig.rs  tags.rs  tests.rs  timestamp.rs
crates/nostr/src/types/filter/: mod.rs  tags.rs  tests.rs
crates/nostr/src/types/message/: message_client.rs  message_relay.rs  mod.rs  subscription_id.rs  tests.rs
crates/nostr/tests/: integration_test.rs  test_client.rs
crates/nostr/tests/common/: mod.rs
src/: home.html  index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/crates/cyanocitta_nostr_tools/: Cargo.toml
src-tauri/crates/cyanocitta_nostr_tools/src/: lib.rs  tests.rs
src-tauri/crates/cyanocitta_nostr_tools/src/app_data/: mod.rs
src-tauri/crates/cyanocitta_nostr_tools/src/client/: mod.rs
src-tauri/crates/cyanocitta_nostr_tools/src/message/: close.rs  event.rs  mod.rs  req.rs
src-tauri/crates/cyanocitta_nostr_tools/src/profile/: mod.rs
src-tauri/crates/cyanocitta_nostr_tools/src/relay/: mod.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/client_state/: handle_notifications.rs  mod.rs  notifications.rs
src-tauri/src/commands/: events.rs  exit.rs  follow.rs  get_app_data.rs  keys.rs  metadata.rs  mod.rs  new_profile.rs  notes.rs  pk.rs  publish.rs  refresh_subscription.rs  relays.rs  save.rs  set_current_profile.rs  start_subscription.rs  stop_subscription.rs  subscribe.rs  unsubscribe.rs
src-tauri/src/nostr_tools/: mod.rs
src-tauri/src/nostr_tools/client/: mod.rs  start.rs
src-tauri/src/nostr_tools/message/: event.rs  filters.rs  mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/state/: mod.rs
src/css/: global.css
src/js/: common.js  home_script.js  index_script.js
ui/: edit_profile.html  index.html  profile.html  search.html  settings.html  user.html  view_profile.html
ui/scripts/: edit_profile.js  global.js  index.js  search.js  settings.js  view_profile.js
ui/style/: edit_profile.css  global.css  index.css  search.css  settings.css  view_profile.css
