[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[package]
name = "cyanocitta"
version = "0.0.0"
description = "A Nostr client"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
license = "MIT"
repository = "https://github.com/jonassterud/cyanocitta"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.0", features = [] }
nostr-sdk = { version = "0.18", features = [] }
tokio = { version = "1", features = ["full"] }
dirs = { version = "4", features = [] }
serde = { version = "1", features = [] }
serde_json = { version = "1", features = [] }
anyhow = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
