[package]
name = "cyanocitta"
version = "0.0.0"
description = "Nostr social media client"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
license = "MIT"
repository = "https://github.com/jonassterud/cyanocitta"
edition = "2021"
rust-version = "1.67"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.3", features = ["clipboard-write-text"] }
tokio = { version = "1.26", features = ["full"] }
anyhow = { version = "1.0", features = [] }
secp256k1 = { version = "0.26", features = ["rand-std"] }
nostr = { path = "../nostr" }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
