[package]
name = "nostr"
description = "Nostr library for cyanocitta"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
license = "MIT"
repository = "https://github.com/jonassterud/cyanocitta"
edition = "2021"
rust-version = "1.67"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0", features = [] }
secp256k1 = { version = "0.26", features = ["serde", "rand-std", "bitcoin-hashes-std"] }
tokio = { version = "1.26", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", features = [] }